[BUGFIX] changes VISITOR to GUEST

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div id="reset" onclick="reset()"><button>reset</button></div>
       <div class="score-box">
-        <h3>VISTOR</h3>
+        <h3>GUEST</h3>
         <div id="guest" class="score">0</div>
         <div class="button-row">
           <div id="guest-one" class="add-points" onclick="guestOne()">+ 1</div>
