[BUFIX] Corrects capitalization error on Reset

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div id="home-three" class="add-points" onclick="homeThree()">+3</div>
         </div>
       </div>
-      <div id="reset" onclick="reset()"><button>Reset</button></div>
+      <div id="reset" onclick="reset()"><button>reset</button></div>
       <div class="score-box">
         <h3>GUEST</h3>
         <div id="guest" class="score">0</div>
